--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -178,7 +178,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/rsv_splash"
     android:fitsSystemWindows="true"
     android:gravity="center_horizontal"
     android:orientation="vertical"
@@ -195,6 +194,8 @@
 
     <ScrollView
         android:id="@+id/login_form"
+        android:background="@drawable/rsv_splash"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -202,29 +203,14 @@
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginTop="70dp"
-            android:layout_marginRight="72dp"
-            android:layout_marginBottom="72dp"
-            android:layoutDirection="rtl"
+            android:layout_margin="16dp"
+
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:elevation="1dp"
-                android:gravity="center_horizontal"
-                android:keepScreenOn="true"
-                android:text="@string/app_name"
-                android:textColor="@color/colorPrimary"
-                android:textSize="32sp"
-                android:textStyle="bold" />
-
-            <TextView
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
                 android:gravity="center_horizontal"
                 android:text="A PROJECT OF"
                 android:textColor="@color/white"
@@ -239,34 +225,56 @@
                 android:src="@drawable/agakhannew" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="360dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="110dp"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/testing"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="@color/red"
+                    android:elevation="2dp"
+                    android:gravity="center_horizontal"
+                    android:text="ONLY FOR TESTING"
+                    android:textColor="@color/dullWhite"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="150dp"
                     android:orientation="horizontal">
 
                     <EditText
                         android:id="@+id/email"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:layout_weight="0.99"
-                        android:drawableEnd="@drawable/ic_assignment_ind_black_24dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="4dp"
+                        android:background="@color/white"
+                        android:drawableStart="@drawable/ic_assignment_ind_black_24dp"
                         android:drawablePadding="8dp"
-                        android:hint="Username/Code"
+                        android:elevation="1dp"
+                        android:gravity="center_vertical"
+                        android:hint="Username"
                         android:imeActionId="@+id/login"
                         android:imeActionLabel="@string/action_sign_in_short"
                         android:imeOptions="actionUnspecified"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
-                        android:paddingStart="4dp"
-                        android:paddingEnd="4dp"
+                        android:minWidth="280dp"
+                        android:paddingStart="12dp"
+                        android:paddingEnd="12dp"
+                        android:radius="2dp"
                         android:singleLine="true"
-                        android:textSize="18sp">
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="20sp">
 
                         <requestFocus />
                     </EditText>
@@ -278,101 +286,71 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/dullWhite"
                     android:orientation="horizontal">
 
-                    <Button
-                        android:id="@+id/showPassword"
-                        style="?android:attr/borderlessButtonStyle"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/round_button"
-                        android:drawableStart="@drawable/ic_remove_red_eye_black_24dp"
-                        android:gravity="center"
-                        android:padding="3dp"
-                        android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/password"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:layout_weight="0.99"
-                        android:drawableEnd="@drawable/ic_lock_black_24dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="56dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"
+                        android:background="@color/white"
+                        android:drawableStart="@drawable/ic_lock_black_24dp"
                         android:drawablePadding="8dp"
+                        android:elevation="1dp"
                         android:hint="@string/prompt_password"
-                        android:imeActionId="@+id/login"
                         android:imeActionLabel="@string/action_sign_in_short"
                         android:imeOptions="actionUnspecified"
                         android:inputType="textPassword"
                         android:maxLines="1"
-                        android:paddingStart="4dp"
-                        android:paddingEnd="4dp"
+                        android:minWidth="280dp"
+                        android:paddingStart="12dp"
+                        android:paddingEnd="12dp"
+                        android:radius="2dp"
                         android:singleLine="true"
-                        android:textSize="18sp" />
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="20sp" />
 
+                    <Button
+                        android:id="@+id/showPassword"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_margin="16dp"
+                        android:background="@null"
+                        android:drawableBottom="@drawable/ic_remove_red_eye_black_24dp"
+                        android:drawablePadding="12dp"
+                        android:onClick="@{() -> callback.onShowPasswordClick()}"
+                        android:textSize="20sp" />
                     <!--android:text="aku?dmu"-->
 
                 </LinearLayout>
-
-            </LinearLayout>
-
-            <Spinner
-                android:id="@+id/spTaluka"
-                style="@style/Widget.AppCompat.Spinner.Underlined"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-
-
-                android:layoutDirection="rtl"
-                android:popupBackground="#3d3d3d"
-                android:visibility="gone" />
-
-            <Spinner
-                android:id="@+id/spUCs"
-                style="@style/Widget.AppCompat.Spinner.Underlined"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
-                android:gravity="center"
-
-
-                android:layoutDirection="rtl"
-                android:popupBackground="#3d3d3d"
-                android:visibility="gone" />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp">
-
-                <Button
-                    android:id="@+id/syncData"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="38"
-                    android:background="@color/black_overlay"
-                    android:drawableStart="@drawable/ic_cloud_download_black_24dp"
-                    android:padding="15dp"
-                    android:text="Sync Data"
-                    android:textStyle="bold" />
-
                 <Button
                     android:id="@+id/email_sign_in_button"
                     style="?android:textAppearanceSmall"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="2dp"
-                    android:layout_weight="68"
-                    android:background="#56ae51"
+                    android:layout_marginTop="4dp"
+                    android:background="@color/colorAccent"
                     android:padding="16dp"
                     android:text="@string/action_sign_in"
                     android:textStyle="bold" />
             </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/syncData"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:padding="16dp"
+                android:text="Always sync data before first use. Click Here to SYNC"
+                android:textColor="@color/gray"
+                android:textStyle="bold" />
+
 
             <TextView
                 android:id="@+id/txtinstalldate"
