--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,18 +10,20 @@
          TextureView, etc. -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_marginTop="75dp"
+        android:layout_margin="16dp"
         android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="350dp"
             android:contentDescription="Aga khan LOGO"
-            android:paddingTop="70dp"
-            android:src="@drawable/agakhan" />
+            android:src="@drawable/agakhannew"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/fullscreen_content"
@@ -29,13 +31,12 @@
             android:layout_height="match_parent"
             android:background="#3b484e"
             android:elevation="2dp"
-
             android:gravity="center_horizontal"
             android:keepScreenOn="true"
-            android:text="@string/app_name"
             android:textColor="#56ae51"
             android:textSize="36sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="invisible" />
 
 
         <!--<TextView
@@ -58,14 +59,6 @@
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
             android:textStyle="bold" />-->
-    </LinearLayout>
-
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
 
         <LinearLayout
             android:id="@+id/fullscreen_content_controls"
@@ -86,6 +79,10 @@
                 android:text="@string/dummy_button" />
 
         </LinearLayout>
-    </FrameLayout>
+    </LinearLayout>
 
-</FrameLayout>
+    <!-- This FrameLayout insets its children based on system windows using
+         android:fitsSystemWindows. -->
+
+
+</ScrollView>
