--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <!--        <item name="android:scrollViewStyle">@style/BackgroundStyle</item>-->
         <item name="android:textViewStyle">@style/labels</item>
         <item name="android:editTextStyle">@style/textInput</item>
+        <item name="android:textColorHint">@color/colorPrimaryBeta</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -15,6 +16,7 @@
         <item name="android:buttonStyle">@style/buttons</item>
         <item name="android:checkboxStyle">@style/checkbox</item>
         <item name="android:radioButtonStyle">@style/radiobutton</item>
+        <item name="android:textColorHint">@color/colorPrimaryBeta</item>
         <!--        <item name="android:toolbarStyle">@style/ActionBar</item>-->
         <!--        <item name="actionBarStyle">@style/ActionBar</item>-->
         <!-- Customize your theme here. -->
@@ -35,7 +37,7 @@
 
     <style name="SpinnerItemText">
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
     </style>
 
     <!--<style name="ActionBarTheme" parent="Widget.AppCompat.Light.ActionBar">-->
@@ -53,7 +55,7 @@
         <item name="android:padding">5dp</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:paddingTop">16dp</item>
         <item name="android:elevation">1dp</item>
         <item name="android:paddingStart">8dp</item>
@@ -67,7 +69,7 @@
         <item name="android:background">@android:color/darker_gray</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:padding">4dp</item>
     </style>
 
@@ -79,7 +81,7 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">#ff1e1e</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:visibility">invisible</item>
         <item name="android:padding">16dp</item>
     </style>
@@ -92,7 +94,7 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">#ef6d6d</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:visibility">invisible</item>
         <item name="android:padding">16dp</item>
     </style>
@@ -128,7 +130,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">16dp</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:textColor">#ff0000</item>
         <item name="android:background">#d6d6d6</item>
         <item name="android:padding">16dp</item>
@@ -139,14 +141,14 @@
     <style name="spinnerItemStyle">
         <item name="android:padding">10dp</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="spinnerDropDownItemStyle">
         <item name="android:padding">20dp</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
@@ -158,7 +160,7 @@
         <item name="android:orientation">vertical</item>
         <item name="android:background">#d6d6d6</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
 
     </style>
 
@@ -166,7 +168,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:clickable">true</item>
         <item name="android:layout_marginBottom">1dp</item>
         <item name="android:padding">10dp</item>
@@ -178,7 +180,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:padding">16dp</item>
         <item name="android:radius">2dp</item>
         <item name="android:elevation">5dp</item>
@@ -191,7 +193,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:button">@null</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:clickable">true</item>
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
         <item name="android:drawableStart">?android:attr/listChoiceIndicatorMultiple</item>
@@ -302,7 +304,7 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
         <item name="android:drawable">@drawable/textview_background_grad</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:paddingTop">16dp</item>
         <item name="android:elevation">1dp</item>
         <item name="android:paddingStart">8dp</item>
@@ -318,7 +320,7 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
         <item name="android:drawable">@drawable/textview_background_grad</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:paddingTop">16dp</item>
         <item name="android:elevation">1dp</item>
         <item name="android:paddingStart">8dp</item>
@@ -335,7 +337,7 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">25sp</item>
         <item name="android:drawable">@drawable/textview_background_grad</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:paddingTop">16dp</item>
         <item name="android:elevation">1dp</item>
         <item name="android:paddingStart">8dp</item>
@@ -351,7 +353,7 @@
         <item name="android:textColor">@color/colorPrimaryBeta</item>
         <item name="android:textSize">15sp</item>
         <item name="android:drawable">@drawable/textview_background_grad</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:typeface">sans</item>
         <item name="android:padding">10dp</item>
         <item name="android:elevation">1dp</item>
         <item name="android:paddingStart">8dp</item>
