--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -17,6 +17,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/rsv_bg"
+        android:padding="16dp"
         android:layoutDirection="rtl">
 
         <LinearLayout style="@style/linearlayout_view">
@@ -121,7 +123,8 @@
                         <EditText
                             android:id="@+id/RS9"
                             style="@style/EditTextAlphaNumeric"
-                            android:hint="@string/RS9" />
+                            android:hint="@string/RS9"
+                            android:inputType="textPersonName" />
 
                     </LinearLayout>
 
